# ai-rag-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/rag_api/: main.py
src/rag_api/api/: deps.py
src/rag_api/api/v1/: router.py
src/rag_api/api/v1/endpoints/: documents.py  health.py  queries.py
src/rag_api/core/: config.py  exceptions.py  logging.py
src/rag_api/domain/schemas/: common.py  document.py  query.py
src/rag_api/domain/services/: document_service.py  rag_service.py
src/rag_api/infrastructure/ai/: client.py  ollama_client.py
src/rag_api/infrastructure/db/: models.py  session.py
src/rag_api/infrastructure/db/repositories/: base.py  document_repository.py
src/rag_api/infrastructure/vector_store/: chromadb_store.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_document_service.py  test_rag_service.py
